# claude-vault-scaffold-installer

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/vault_scaffold/: cli.py
src/vault_scaffold/commands/: doctor.py  init.py  status.py  update.py
src/vault_scaffold/core/: checks.py  config_patcher.py  environment.py  manifest.py  path_resolver.py  template_installer.py  venv_manager.py  version_tracker.py
src/vault_scaffold/template/: .mcp.json  CLAUDE.md  manifest.toml
src/vault_scaffold/template/.claude/: index-config.yaml  settings.json
src/vault_scaffold/template/.claude/agents/: vault-describer.md
src/vault_scaffold/template/.claude/scripts/: check-pending-descriptions.sh  enforce-index-first.py  enforce-sdd-tdd.py  queue-description.py  sc_mcp_server.py  suggest-semantic-search.py  update-vault-index.py  vault-lint-hook.py
src/vault_scaffold/template/.obsidian/: community-plugins.json
tests/: conftest.py  test_checks.py  test_status.py  test_template_installer.py  test_version_tracker.py
