[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault-scaffold"
version = "0.3.0"
description = "CLI installer for claude-vault-scaffold — sets up Obsidian + Claude Code vault integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
vault-scaffold = "vault_scaffold.cli:app"

[project.urls]
Homepage = "https://github.com/donkdont/claude-vault-scaffold-installer"
Repository = "https://github.com/donkdont/claude-vault-scaffold-installer"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_scaffold"]

[dependency-groups]
dev = ["pytest>=8"]
